# village-peace

./: package-lock.json
game/: .eslintrc.json  package-lock.json  package.json
game/src/env/: schema.mjs
game/src/pages/: index.tsx
game/src/services/: ws.ts
game/src/styles/: globals.css
game/src/types/: domain.ts
server/: Dockerfile  pyproject.toml
server/app/: main.py  models.py  services.py
