[tool.poetry]
name = "village-peace"
version = "0.1.0"
description = "An online game where you have to bring peace to all villages using violence"
authors = ["crpier42 <crpier42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
